--- a/AssistView/AssistView/AssistView.csproj
+++ b/AssistView/AssistView/AssistView.csproj
@@ -60,11 +60,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="*" />
 		<PackageReference Include="Syncfusion.Maui.AIAssistView" Version="*" />
 		<PackageReference Include="Syncfusion.Maui.Chat" Version="*" />
-		<PackageReference Include="Microsoft.SemanticKernel" Version="1.27.0" />
+		<PackageReference Include="Microsoft.SemanticKernel" Version="*" />
 	</ItemGroup>
 
 </Project>
